--- a/network/src/main/AndroidManifest.xml
+++ b/network/src/main/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nz.co.network">
+    package="nz.co.tsongkha">
 
     <application
         android:allowBackup="true"
