--- a/network/build.gradle
+++ b/network/build.gradle
@@ -34,6 +34,9 @@ dependencies {
     implementation 'androidx.core:core-ktx:1.2.0'
 
     implementation 'io.ktor:ktor-client-android:1.3.2'
+    implementation "io.ktor:ktor-client-logging-jvm:1.3.2"
+    implementation "io.ktor:ktor-client-json-jvm:1.3.2"
+    implementation "io.ktor:ktor-client-gson:1.3.2"
 
     implementation 'com.github.stephanenicolas.toothpick:ktp:3.1.0'
     kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
