--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,9 +31,14 @@ dependencies {
 
     implementation project(':network')
 
+    implementation "com.yelp.android:bento:15.8.0"
+    androidTestImplementation "com.yelp.android:bento-testing:15.8.0"
+
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
