--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
 
     implementation 'com.github.stephanenicolas.toothpick:ktp:3.1.0'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie-lifecycle-viewmodel-ktp:3.1.0'
+    implementation 'com.github.stephanenicolas.toothpick:smoothie-lifecycle-ktp:3.1.0'
     kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
 
     testImplementation 'junit:junit:4.13'
