--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,11 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    testOptions {
+        unitTests.all {
+            useJUnitPlatform()
+        }
+    }
 }
 
 dependencies {
@@ -48,6 +53,11 @@ dependencies {
     kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
 
     testImplementation 'junit:junit:4.13'
+    testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.0.4'
+    testImplementation 'io.kotest:kotest-assertions-core-jvm:4.0.4'
+    testImplementation 'io.kotest:kotest-property-jvm:4.0.4'
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
