--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,9 @@ android {
             useJUnitPlatform()
         }
     }
+    packagingOptions {
+        exclude("META-INF/*.kotlin_module")
+    }
 }
 
 dependencies {
@@ -38,6 +41,9 @@ dependencies {
 
     implementation "com.yelp.android:bento:15.8.0"
     androidTestImplementation "com.yelp.android:bento-testing:15.8.0"
+
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
@@ -52,11 +58,14 @@ dependencies {
     implementation 'com.github.stephanenicolas.toothpick:smoothie-lifecycle-ktp:3.1.0'
     kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
 
+
+    testImplementation project(':network')
     testImplementation 'junit:junit:4.13'
     testImplementation 'io.kotest:kotest-runner-junit5-jvm:4.0.4'
     testImplementation 'io.kotest:kotest-assertions-core-jvm:4.0.4'
     testImplementation 'io.kotest:kotest-property-jvm:4.0.4'
-    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.5'
+
+    testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
