--- a/network/build.gradle
+++ b/network/build.gradle
@@ -23,7 +23,6 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
-
 }
 
 dependencies {
@@ -36,18 +35,13 @@ dependencies {
     implementation "io.ktor:ktor-client-logging-jvm:1.3.2"
     implementation "io.ktor:ktor-client-json-jvm:1.3.2"
     implementation "io.ktor:ktor-client-gson:1.3.2"
+    implementation "io.ktor:ktor-client-mock:1.3.2"
+    implementation "io.ktor:ktor-client-mock-jvm:1.3.2"
 
     implementation 'com.github.stephanenicolas.toothpick:ktp:3.1.0'
     kapt 'com.github.stephanenicolas.toothpick:toothpick-compiler:3.1.0'
 
     testImplementation 'junit:junit:4.13'
-
-    testApi 'io.ktor:ktor-client-android:1.3.2'
-    testApi "io.ktor:ktor-client-logging-jvm:1.3.2"
-    testApi "io.ktor:ktor-client-json-jvm:1.3.2"
-    testApi "io.ktor:ktor-client-gson:1.3.2"
-    testApi "io.ktor:ktor-client-mock:1.3.2"
-    testApi "io.ktor:ktor-client-mock-jvm:1.3.2"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
