--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,6 +66,7 @@ dependencies {
     testImplementation 'io.kotest:kotest-property-jvm:4.0.4'
 
     testImplementation 'org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.5'
+    testImplementation "io.mockk:mockk:1.10.0"
 
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
