--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
     implementation 'com.github.stephanenicolas.toothpick:ktp:3.1.0'
     implementation 'com.github.stephanenicolas.toothpick:smoothie-lifecycle-viewmodel-ktp:3.1.0'
